# django_ninja_pdm_temp

./: .env.example  .gitignore  .pdm-python  db.sqlite3  pyproject.toml
apps/test_mypy/: apps.py  models.py
apps/test_mypy/migrations/: 0001_initial.py
apps/user/: apis.py  auth.py  models.py
apps/user/migrations/: 0001_initial.py
core/: settings.py  urls.py
utils/: pagination.py
utils/api/: error.py  request.py  response.py
