[project]
name = "django_ninja_pdm_temp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yosong", email = "2404559603@qq.com"},
]
dependencies = ["django>=5.2", "python-dotenv>=1.1.0", "django-ninja>=1.4.1", "django-ninja-jwt>=5.2.7"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
